--- a/prototype.css
+++ b/prototype.css
@@ -19,7 +19,6 @@ body{
     width: 70px;
     margin-left:145px ;
 }
-
 .bodyCover{
     margin-top:-40px ;
     display: flex;
@@ -62,12 +61,10 @@ input,button,label{
     border:inset 1.5px;
     border-radius: 3px;
     font-size: 15px;
-    box-shadow: 0px 0px 7px #0066CC;
-    
-    
 }
-
-
+.input-student-number:hover ,.input-password:hover{
+    box-shadow: 0px 0px 7px #0066CC;
+}
 .student-number-text{
     font-size: 10px;
 }
@@ -75,16 +72,13 @@ input,button,label{
     width: 50px;
     height: 10px;
     margin-left: 148px;
-    border-color: #999999;
     border:inset 1.5px;
     border-radius: 3px;
-    border: solid 3px;
-    border-color: #0066CC;
+    border: solid 1px #999999;
     font-size: 15px;
 }
 .student-number,button,.long-bar-text,.form-body,.Sponsor-text,.Login-button{
     font-family: Arial, Helvetica, sans-serif;
-
 }
 .Sponsor-text{
     background-color:whitesmoke ;
