--- a/prototype.css
+++ b/prototype.css
@@ -11,6 +11,8 @@ body{
     margin-left: 120px;
     margin-bottom: 10px;
     border: solid 1px #999999;
+    border-top-color: #666666;
+    border-left-color: #666666;
 }
 .protoSc{
      width: 230px;
