--- a/prototype.css
+++ b/prototype.css
@@ -33,7 +33,7 @@ body{
     text-align: center;
 }
 .the-first-text{
-   color:#313178;
+   color:#42297d;
    font-size: 7px;
    margin-top: -10px;
    font-weight: 800;
@@ -45,7 +45,6 @@ input,button,label{
    width:350px;
    padding-top: 2px;
    padding-bottom: 2px;
-   /*background-color: #313178;*/
    background-color: #42297d;
    color: white;
    font-size: 9px;
@@ -88,7 +87,7 @@ input,button,label{
 .Sponsor-text{
     background-color:whitesmoke ;
     font-size: 12px;
-    color: #0066CC;
+    color:#007bff;
     padding: 4px 10px;
     border-radius: 4px;
     width: 190px;
