--- a/prototype.css
+++ b/prototype.css
@@ -75,7 +75,7 @@ input,button,label{
     border-radius: 3px;
     font-size: 15px;
 }.input-student-numberProto{
-    height: 32px;
+    height: 27px;
     margin-left: 118px;
     width: 100px;
 }
@@ -93,6 +93,9 @@ input,button,label{
     border-radius: 3px;
     border: solid 1px #999999;
     font-size: 15px;
+}
+.input-passwordProto{
+    height: 8px;
 }
 .student-number,button,.long-bar-text,.form-body,.Sponsor-text,.Login-button{
     font-family: Arial, Helvetica, sans-serif;
