color on switch

--- a/prototype.css
+++ b/prototype.css
@@ -101,7 +101,7 @@ input,button,label{
     font-family: Arial, Helvetica, sans-serif;
 }
 .Sponsor-text{
-    background-color:#dcdcdc ;
+    background-color:#f4f4f4 ;
     font-size: 12px;
     color:#007bff;
     padding: 4px 10px;
